// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PipelineDetails closes side panel when close button is clicked 1`] = `
<div
  className="page"
>
  <div
    className="page"
  >
    <MD2Tabs
      onSwitch={[Function]}
      selectedTab={0}
      tabs={
        Array [
          "Graph",
          "Source",
        ]
      }
    />
    <div
      className="page"
    >
      <div
        className="page"
      >
        <div
          className="page"
          style={
            Object {
              "overflow": "hidden",
              "position": "relative",
            }
          }
        >
          <WithStyles(Paper)
            className="summaryCard"
          >
            <div
              style={
                Object {
                  "alignItems": "baseline",
                  "display": "flex",
                  "justifyContent": "space-between",
                }
              }
            >
              <div
                className="header"
              >
                Summary
              </div>
              <WithStyles(Button)
                color="secondary"
                onClick={[Function]}
              >
                Hide
              </WithStyles(Button)>
            </div>
            <div
              className="summaryKey"
            >
              Uploaded on
            </div>
            <div>
              9/5/2018, 4:03:02 AM
            </div>
            <div
              className="summaryKey"
            >
              Description
            </div>
            <div>
              test job description
            </div>
          </WithStyles(Paper)>
          <Graph
            graph={
              Graph {
                "_defaultEdgeLabelFn": [Function],
                "_defaultNodeLabelFn": [Function],
                "_edgeLabels": Object {},
                "_edgeObjs": Object {},
                "_in": Object {},
                "_isCompound": false,
                "_isDirected": true,
                "_isMultigraph": false,
                "_label": undefined,
                "_nodes": Object {},
                "_out": Object {},
                "_preds": Object {},
                "_sucs": Object {},
              }
            }
            onClick={[Function]}
            selectedNodeId=""
          />
          <SidePanel
            isOpen={false}
            onClose={[Function]}
            title=""
          >
            <div
              className="page"
            >
              <div>
                Unable to retrieve node info
              </div>
            </div>
          </SidePanel>
          <div
            className="footer"
          >
            <div
              className="flex footerInfoOffset"
            >
              <pure(InfoOutlinedIcon)
                style={
                  Object {
                    "color": "#80868b",
                    "height": 16,
                    "width": 16,
                  }
                }
              />
              <span
                className="infoSpan"
              >
                Static pipeline graph
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PipelineDetails collapses summary card when summary shown state is false 1`] = `
<div
  className="page"
>
  <div
    className="page"
  >
    <MD2Tabs
      onSwitch={[Function]}
      selectedTab={0}
      tabs={
        Array [
          "Graph",
          "Source",
        ]
      }
    />
    <div
      className="page"
    >
      <div
        className="page"
      >
        <div
          className="page"
          style={
            Object {
              "overflow": "hidden",
              "position": "relative",
            }
          }
        >
          <Graph
            graph={
              Graph {
                "_defaultEdgeLabelFn": [Function],
                "_defaultNodeLabelFn": [Function],
                "_edgeLabels": Object {},
                "_edgeObjs": Object {},
                "_in": Object {},
                "_isCompound": false,
                "_isDirected": true,
                "_isMultigraph": false,
                "_label": undefined,
                "_nodes": Object {},
                "_out": Object {},
                "_preds": Object {},
                "_sucs": Object {},
              }
            }
            onClick={[Function]}
            selectedNodeId=""
          />
          <SidePanel
            isOpen={false}
            onClose={[Function]}
            title=""
          >
            <div
              className="page"
            >
              <div>
                Unable to retrieve node info
              </div>
            </div>
          </SidePanel>
          <div
            className="footer"
          >
            <WithStyles(Button)
              color="secondary"
              onClick={[Function]}
            >
              Show summary
            </WithStyles(Button)>
            <div
              className="flex"
            >
              <pure(InfoOutlinedIcon)
                style={
                  Object {
                    "color": "#80868b",
                    "height": 16,
                    "width": 16,
                  }
                }
              />
              <span
                className="infoSpan"
              >
                Static pipeline graph
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PipelineDetails opens side panel on clicked node, shows message when node is not found in graph 1`] = `
<div
  className="page"
>
  <div
    className="page"
  >
    <MD2Tabs
      onSwitch={[Function]}
      selectedTab={0}
      tabs={
        Array [
          "Graph",
          "Source",
        ]
      }
    />
    <div
      className="page"
    >
      <div
        className="page"
      >
        <div
          className="page"
          style={
            Object {
              "overflow": "hidden",
              "position": "relative",
            }
          }
        >
          <WithStyles(Paper)
            className="summaryCard"
          >
            <div
              style={
                Object {
                  "alignItems": "baseline",
                  "display": "flex",
                  "justifyContent": "space-between",
                }
              }
            >
              <div
                className="header"
              >
                Summary
              </div>
              <WithStyles(Button)
                color="secondary"
                onClick={[Function]}
              >
                Hide
              </WithStyles(Button)>
            </div>
            <div
              className="summaryKey"
            >
              Uploaded on
            </div>
            <div>
              9/5/2018, 4:03:02 AM
            </div>
            <div
              className="summaryKey"
            >
              Description
            </div>
            <div>
              test job description
            </div>
          </WithStyles(Paper)>
          <Graph
            graph={
              Graph {
                "_defaultEdgeLabelFn": [Function],
                "_defaultNodeLabelFn": [Function],
                "_edgeLabels": Object {},
                "_edgeObjs": Object {},
                "_in": Object {},
                "_isCompound": false,
                "_isDirected": true,
                "_isMultigraph": false,
                "_label": undefined,
                "_nodes": Object {},
                "_out": Object {},
                "_preds": Object {},
                "_sucs": Object {},
              }
            }
            onClick={[Function]}
            selectedNodeId="some-node-id"
          />
          <SidePanel
            isOpen={true}
            onClose={[Function]}
            title="some-node-id"
          >
            <div
              className="page"
            >
              <div>
                Unable to retrieve node info
              </div>
            </div>
          </SidePanel>
          <div
            className="footer"
          >
            <div
              className="flex footerInfoOffset"
            >
              <pure(InfoOutlinedIcon)
                style={
                  Object {
                    "color": "#80868b",
                    "height": 16,
                    "width": 16,
                  }
                }
              />
              <span
                className="infoSpan"
              >
                Static pipeline graph
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PipelineDetails shows clicked node info in the side panel if it is in the graph 1`] = `
<div
  className="page"
>
  <div
    className="page"
  >
    <MD2Tabs
      onSwitch={[Function]}
      selectedTab={0}
      tabs={
        Array [
          "Graph",
          "Source",
        ]
      }
    />
    <div
      className="page"
    >
      <div
        className="page"
      >
        <div
          className="page"
          style={
            Object {
              "overflow": "hidden",
              "position": "relative",
            }
          }
        >
          <WithStyles(Paper)
            className="summaryCard"
          >
            <div
              style={
                Object {
                  "alignItems": "baseline",
                  "display": "flex",
                  "justifyContent": "space-between",
                }
              }
            >
              <div
                className="header"
              >
                Summary
              </div>
              <WithStyles(Button)
                color="secondary"
                onClick={[Function]}
              >
                Hide
              </WithStyles(Button)>
            </div>
            <div
              className="summaryKey"
            >
              Uploaded on
            </div>
            <div>
              9/5/2018, 4:03:02 AM
            </div>
            <div
              className="summaryKey"
            >
              Description
            </div>
            <div>
              test job description
            </div>
          </WithStyles(Paper)>
          <Graph
            graph={
              Graph {
                "_defaultEdgeLabelFn": [Function],
                "_defaultNodeLabelFn": [Function],
                "_edgeLabels": Object {},
                "_edgeObjs": Object {},
                "_in": Object {
                  "node1": Object {},
                },
                "_isCompound": false,
                "_isDirected": true,
                "_isMultigraph": false,
                "_label": undefined,
                "_nodeCount": 1,
                "_nodes": Object {
                  "node1": Object {
                    "info": SelectedNodeInfo {
                      "args": Array [
                        "test arg",
                        "test arg2",
                      ],
                      "command": Array [
                        "test command",
                        "test command 2",
                      ],
                      "condition": "test condition",
                      "image": "test image",
                      "inputs": Array [
                        Array [
                          "key1",
                          "val1",
                        ],
                        Array [
                          "key2",
                          "val2",
                        ],
                      ],
                      "nodeType": "container",
                      "outputs": Array [
                        Array [
                          "key3",
                          "val3",
                        ],
                        Array [
                          "key4",
                          "val4",
                        ],
                      ],
                    },
                    "label": "node1",
                  },
                },
                "_out": Object {
                  "node1": Object {},
                },
                "_preds": Object {
                  "node1": Object {},
                },
                "_sucs": Object {
                  "node1": Object {},
                },
              }
            }
            onClick={[Function]}
            selectedNodeId="node1"
          />
          <SidePanel
            isOpen={true}
            onClose={[Function]}
            title="node1"
          >
            <div
              className="page"
            >
              <div
                className=""
              >
                <StaticNodeDetails
                  nodeInfo={
                    SelectedNodeInfo {
                      "args": Array [
                        "test arg",
                        "test arg2",
                      ],
                      "command": Array [
                        "test command",
                        "test command 2",
                      ],
                      "condition": "test condition",
                      "image": "test image",
                      "inputs": Array [
                        Array [
                          "key1",
                          "val1",
                        ],
                        Array [
                          "key2",
                          "val2",
                        ],
                      ],
                      "nodeType": "container",
                      "outputs": Array [
                        Array [
                          "key3",
                          "val3",
                        ],
                        Array [
                          "key4",
                          "val4",
                        ],
                      ],
                    }
                  }
                />
              </div>
            </div>
          </SidePanel>
          <div
            className="footer"
          >
            <div
              className="flex footerInfoOffset"
            >
              <pure(InfoOutlinedIcon)
                style={
                  Object {
                    "color": "#80868b",
                    "height": 16,
                    "width": 16,
                  }
                }
              />
              <span
                className="infoSpan"
              >
                Static pipeline graph
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PipelineDetails shows empty pipeline details with empty graph 1`] = `
<div
  className="page"
>
  <div
    className="page"
  >
    <MD2Tabs
      onSwitch={[Function]}
      selectedTab={0}
      tabs={
        Array [
          "Graph",
          "Source",
        ]
      }
    />
    <div
      className="page"
    >
      <div
        className="page"
      >
        <div
          className="page"
          style={
            Object {
              "overflow": "hidden",
              "position": "relative",
            }
          }
        >
          <WithStyles(Paper)
            className="summaryCard"
          >
            <div
              style={
                Object {
                  "alignItems": "baseline",
                  "display": "flex",
                  "justifyContent": "space-between",
                }
              }
            >
              <div
                className="header"
              >
                Summary
              </div>
              <WithStyles(Button)
                color="secondary"
                onClick={[Function]}
              >
                Hide
              </WithStyles(Button)>
            </div>
            <div
              className="summaryKey"
            >
              Uploaded on
            </div>
            <div>
              9/5/2018, 4:03:02 AM
            </div>
            <div
              className="summaryKey"
            >
              Description
            </div>
            <div>
              test job description
            </div>
          </WithStyles(Paper)>
          <Graph
            graph={
              Graph {
                "_defaultEdgeLabelFn": [Function],
                "_defaultNodeLabelFn": [Function],
                "_edgeLabels": Object {},
                "_edgeObjs": Object {},
                "_in": Object {},
                "_isCompound": false,
                "_isDirected": true,
                "_isMultigraph": false,
                "_label": undefined,
                "_nodes": Object {},
                "_out": Object {},
                "_preds": Object {},
                "_sucs": Object {},
              }
            }
            onClick={[Function]}
            selectedNodeId=""
          />
          <SidePanel
            isOpen={false}
            onClose={[Function]}
            title=""
          >
            <div
              className="page"
            >
              <div>
                Unable to retrieve node info
              </div>
            </div>
          </SidePanel>
          <div
            className="footer"
          >
            <div
              className="flex footerInfoOffset"
            >
              <pure(InfoOutlinedIcon)
                style={
                  Object {
                    "color": "#80868b",
                    "height": 16,
                    "width": 16,
                  }
                }
              />
              <span
                className="infoSpan"
              >
                Static pipeline graph
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PipelineDetails shows empty pipeline details with no graph 1`] = `
<div
  className="page"
>
  <div
    className="page"
  >
    <MD2Tabs
      onSwitch={[Function]}
      selectedTab={0}
      tabs={
        Array [
          "Graph",
          "Source",
        ]
      }
    />
    <div
      className="page"
    >
      <div
        className="page"
      >
        <span
          style={
            Object {
              "margin": "40px auto",
            }
          }
        >
          No graph to show
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PipelineDetails shows pipeline source code when config tab is clicked 1`] = `
<div
  className="page"
>
  <div
    className="page"
  >
    <MD2Tabs
      onSwitch={[Function]}
      selectedTab={1}
      tabs={
        Array [
          "Graph",
          "Source",
        ]
      }
    />
    <div
      className="page"
    >
      <div
        className="containerCss"
      >
        <UnControlled
          editorDidMount={[Function]}
          options={
            Object {
              "lineNumbers": true,
              "lineWrapping": true,
              "mode": "text/yaml",
              "readOnly": true,
              "theme": "default",
            }
          }
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
